[gd_scene load_steps=10 format=3 uid="uid://d0uo583ufdbhc"]

[ext_resource type="Script" path="res://Scripts/Character/character.gd" id="1_bk7ba"]
[ext_resource type="PackedScene" uid="uid://d0wyw0ghyh1c4" path="res://Animations/character_animation.tscn" id="2_vjciu"]
[ext_resource type="Texture2D" uid="uid://cl3n5uvt3qyn" path="res://Sprites/Characters/player_tank_exploded.svg" id="3_ki8cv"]
[ext_resource type="Texture2D" uid="uid://cw4pw06h32618" path="res://Sprites/Characters/player_melee_exploded.svg" id="4_oi4hp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_onshs"]
atlas = ExtResource("3_ki8cv")
region = Rect2(0, 0, 117, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_stn5v"]
atlas = ExtResource("3_ki8cv")
region = Rect2(123, 69, 27, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_p6ie2"]
atlas = ExtResource("4_oi4hp")
region = Rect2(1, 27, 59, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_wybfy"]
atlas = ExtResource("4_oi4hp")
region = Rect2(117, 0, 54, 51)

[sub_resource type="AtlasTexture" id="AtlasTexture_6hjv6"]
atlas = ExtResource("4_oi4hp")
region = Rect2(106, 55, 59, 59)

[node name="Melee" type="Node2D"]
position = Vector2(2.08165e-12, 2.08165e-12)
script = ExtResource("1_bk7ba")

[node name="CharacterAnimation" parent="." instance=ExtResource("2_vjciu")]
autoplay = "character_animation/character_idle"

[node name="Elements" type="Node2D" parent="."]

[node name="Shadow" type="Sprite2D" parent="Elements"]
texture = SubResource("AtlasTexture_onshs")

[node name="LeftFoot" type="Sprite2D" parent="Elements"]
position = Vector2(-11, -7)
texture = SubResource("AtlasTexture_stn5v")

[node name="LeftFoot2" type="Sprite2D" parent="Elements"]
position = Vector2(19, -7)
texture = SubResource("AtlasTexture_stn5v")

[node name="Body" type="Sprite2D" parent="Elements"]
position = Vector2(0, -63)
texture = SubResource("AtlasTexture_p6ie2")

[node name="Head" type="Sprite2D" parent="Elements"]
position = Vector2(0, -128)
texture = SubResource("AtlasTexture_wybfy")

[node name="Weapon" type="Sprite2D" parent="Elements"]
position = Vector2(62, -71)
texture = SubResource("AtlasTexture_6hjv6")

[connection signal="animation_finished" from="CharacterAnimation" to="." method="_on_character_animation_animation_finished"]
[connection signal="animation_started" from="CharacterAnimation" to="." method="_on_character_animation_animation_started"]
